--- a/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
+++ b/src/app/layout/resultat-vaccin/resultat-vaccin.component.html
@@ -7,7 +7,7 @@
           <span class="dash-widget-bg2"><i class="fa fa-user-o"></i></span>
           <div class="dash-widget-info text-right">
             <h3>{{patients.length}}</h3>
-            <span class="widget-title2">Patients <i class="fa fa-check" aria-hidden="true"></i></span>
+            <span class="widget-title2" translate>Patients <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
           <span class="dash-widget-bg1"><i class="fa fa-stethoscope" aria-hidden="true"></i></span>
           <div class="dash-widget-info text-right">
             <h3>50</h3>
-            <span class="widget-title1">Tests <i class="fa fa-check" aria-hidden="true"></i></span>
+            <span class="widget-title1" translate>Tests <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
       </div>
@@ -25,7 +25,7 @@
           <span class="dash-widget-bg3"><i class="fa fa-user-md" aria-hidden="true"></i></span>
           <div class="dash-widget-info text-right">
             <h3>{{rdv.length}}</h3>
-            <span class="widget-title3">Tâches <i class="fa fa-check" aria-hidden="true"></i></span>
+            <span class="widget-title3" translate>Tasks <i class="fa fa-check" aria-hidden="true"></i></span>
           </div>
         </div>
       </div>
@@ -43,19 +43,19 @@
     <div class="row">
       <div class="col-md-12">
         <div class="card-box shadow-sm p-3 mb-5 bg-white rounded">
-          <h4 class="card-title">Informations du vaccin</h4>
+          <h4 class="card-title" translate>Vaccine information</h4>
           <div class="form">
             <div class="form-group row">
-              <label class="col-md-3 col-form-label">N° anonymat</label>
+              <label class="col-md-3 col-form-label" translate>Anonymity number</label>
               <div class="col-md-9">
                 <input type="text" class="form-control rounded" value="{{patient.identifiant}}" readonly>
               </div>
             </div>
             <div class="row">
-              <label class="col-md-3 col-form-label">Sélectionner les vaccins</label>
+              <label class="col-md-3 col-form-label" translate>Select vaccines</label>
               <div class="col-md-9" style="margin-top: 15px;">
                 <ng-multiselect-dropdown
-                  [placeholder]="'Sélectionner les vaccins effectués'"
+                  [placeholder]="'Select the vaccines performed' |translate"
                   [data]="vaccins"
                   [(ngModel)]="vaccinEffectuer"
                   [settings]="dropdownSettings"
@@ -63,7 +63,7 @@
                 </ng-multiselect-dropdown>
               </div>
             </div><br/>
-            <h5 style="margin-bottom: 15px; margin-right: 10px;margin-left: 20px;" *ngIf="vaccinEffectuer.length > 0">Vaccins effectués sur le patient</h5>
+            <h5 style="margin-bottom: 15px; margin-right: 10px;margin-left: 20px;" *ngIf="vaccinEffectuer.length > 0" translate>Vaccines performed on the patient</h5>
             <div class="row" *ngIf="vaccinEffectuer.length > 0">
               <div class="col-md-3" *ngFor="let obj of vaccinEffectuer">
                 <input type="text" class="form-control rounded" value="{{obj}}" readonly/>
@@ -78,13 +78,13 @@
               <div class="col-md-10">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" name="checkbox" class="rounded"> Vérifier
+                    <input type="checkbox" name="checkbox" class="rounded" translate> Check
                   </label>
                 </div>
               </div>
             </div>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary-one" (click)="saveVaccin()" [disabled]="((patient | json) == '{}') || vaccinEffectuer.length == 0">Envoyer</button>
+              <button type="submit" class="btn btn-primary-one" (click)="saveVaccin()" [disabled]="((patient | json) == '{}') || vaccinEffectuer.length == 0" translate >Send</button>
             </div>
           </div>
         </div>
